[gd_scene load_steps=13 format=2]

[ext_resource path="res://sources/themes/font_size/main_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://levels/scenes/sub_scenes/screen_trigger.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/scenes/sub_scenes/saving_progress.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/scenes/sub_scenes/inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/scenes/gui.gd" type="Script" id=5]
[ext_resource path="res://levels/scenes/sub_scenes/information.tscn" type="PackedScene" id=6]
[ext_resource path="res://sources/themes/font_size/main_20.tres" type="DynamicFont" id=8]
[ext_resource path="res://sources/themes/panel/panel_parameter.tres" type="StyleBox" id=9]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("gui/transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gui/transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "end"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("gui/transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gui/transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "start"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("gui/transition:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gui/transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="gui" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="screen_trigger" parent="." instance=ExtResource( 2 )]

[node name="saving_progress" parent="." instance=ExtResource( 3 )]

[node name="inventory" parent="." instance=ExtResource( 4 )]

[node name="information" parent="." instance=ExtResource( 6 )]
margin_bottom = -55.0

[node name="cursor" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
color = Color( 0.298039, 0.298039, 0.298039, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="CenterContainer" parent="."]
anchor_top = 0.539
anchor_right = 1.0
anchor_bottom = 0.594
margin_top = -0.0800171
margin_bottom = 0.319977

[node name="action_name" type="Label" parent="center"]
margin_left = 640.0
margin_top = 7.0
margin_right = 640.0
margin_bottom = 32.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="center/action_name"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = -10
custom_constants/margin_left = -10

[node name="back_text" type="Panel" parent="center/action_name/margin"]
margin_left = -10.0
margin_right = 10.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )

[node name="panel" type="PanelContainer" parent="center/action_name/margin/back_text"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -15.0
margin_right = 32.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 7 )

[node name="margin" type="MarginContainer" parent="center/action_name/margin/back_text/panel"]
margin_left = 5.0
margin_right = 23.0
margin_bottom = 30.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="button_text" type="Label" parent="center/action_name/margin/back_text/panel/margin"]
margin_left = 5.0
margin_right = 13.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 8 )
text = "E"
align = 1
valign = 1

[node name="perfomance_monitor" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 308.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/RESET = SubResource( 6 )
anims/end = SubResource( 4 )
anims/start = SubResource( 5 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
